# ida_buddy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/idb/: __init__.py  __main__.py  audit_call_types.py  cli.py  doctor.py  errors.py  expr.py  protocol.py  registry.py  spawn.py  transport.py  triage.py
src/idb/fmt/: __init__.py  audit_call_types.py  columns.py  compact.py  disasm.py  eval.py  listing.py  memory.py  sessions.py  triage.py  types.py  writes.py  xrefs.py
src/idb/worker/: __init__.py  activate.py  budget.py  dispatch.py  hexcalls.py  idahelp.py  lifecycle.py  main.py  serve.py
src/idb/worker/handlers/: __init__.py  annotate.py  audit_call_types.py  disasm.py  eval.py  info.py  memory.py  symbols.py  triage.py  types.py  xrefs.py
tests/: conftest.py  fake_worker.py  test_audit_call_types_pure.py  test_cli_resolution.py  test_compact.py  test_expr_pure.py  test_fmt_eval.py  test_fmt_golden.py  test_handler_context_caps.py  test_idahelp_pure.py  test_import_order.py  test_protocol.py  test_registry.py  test_spawn.py  test_transport.py  test_triage_pure.py  test_worker_unit.py
tests/integration/: test_audit_call_types_real_ida.py  test_cli_real_ida_usage.py  test_smoke_real_ida.py  test_triage_real_ida.py
