[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ida-buddy"
version = "0.1.0"
description = "windbg-flavored CLI for headless IDA Pro reverse engineering (idalib)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "JustasMasiulis" }]
dependencies = ["pyzmq>=27", "msgspec>=0.21", "idapro>=0.0.9"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
idb = "idb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/idb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
